# sbersupermarket-product-parser

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  mypy.ini  pyproject.toml  tox.ini
application/: start_server.py
application/clients/: __init__.py
application/clients/parser/: __init__.py  core.py  proxies.py  useragent.py
application/common/: cache.py  errors.py  utils.py
application/config/: __init__.py  application.py  auth.py  client.py  db.py  openapi.py  sentry.py
application/dbs/: mongo.py
application/domain/: entities.py  types.py
application/domain/goods/: __init__.py  entities.py  provider.py  repositories.py  servicies.py  types.py
application/infrastructure/: __init__.py  system_status_checker.py
application/server/: app.py
application/server/routers/api/endpoints/parser/: deps.py  handler.py  schemas.py
application/server/routers/health/endpoints/app_info/: handler.py
application/storages/databases/: __init__.py  connector.py  models.py
application/storages/databases/migrations/models/: 0_empty.py  1_20230430003115_None.py  1_initial.py
application/web/: app.py
application/web/core/: auths.py  exception_handlers.py  loggings.py  middlewares.py
application/web/routers/: __init__.py  deps.py
application/web/routers/api/endpoints/: __init__.py
application/web/routers/api/endpoints/parser/: deps.py  handler.py  schemas.py
application/web/routers/health/endpoints/: __init__.py
application/web/routers/health/endpoints/app_state/: __init__.py  deps.py  handler.py  schemas.py
docker/: docker-compose-dev.yml
docker/application/: Dockerfile  Dockerfile_from_undetected_chromedriver
docs/: index.md
tests/: utils.py
tests/test_scripts/: conftest.py
tests/test_web/: conftest.py
tests/test_web/test_api/: test_product_info.py
tests/test_web/test_health/: test_basic.py
